--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-data-grid": "^5.17.4",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "swagger-typescript-api": "^10.0.1",
     "swagger-ui": "^4.14.2"
